--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -1,2 +1,7 @@
 ##grflangid 0x56
-STR_GRF_NAME			: Ahyangyi 的汽车模组
+STR_GRF_NAME                    :Ahyangyi 的汽车模组
+STR_GRF_DESC                    :以中国的汽车为基础的汽车模组。
+STR_PARAM_VANILLA_RV            :原版汽车
+STR_PARAM_VANILLA_RV_DESC       :是否保留原版汽车
+STR_PARAM_VANILLA_RV_DISABLED   :不保留
+STR_PARAM_VANILLA_RV_ENABLED    :保留
