More translation; more main()

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -5,3 +5,5 @@ STR_PARAM_VANILLA_RV            :原版汽车
 STR_PARAM_VANILLA_RV_DESC       :是否保留原版汽车
 STR_PARAM_VANILLA_RV_DISABLED   :不保留
 STR_PARAM_VANILLA_RV_ENABLED    :保留
+STR_PARAM_NIGHT_MODE            :夜景模式
+STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
