Add translations (not in game yet)

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -7,3 +7,7 @@ STR_PARAM_VANILLA_RV_DISABLED   :不保留
 STR_PARAM_VANILLA_RV_ENABLED    :保留
 STR_PARAM_NIGHT_MODE            :夜景模式
 STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
+
+STR_RV_LONGRIVER_NAME           :长江牌 CJ640B 公交车 (汽油)
+STR_RV_LONGRIVER_2DECKER_NAME   :长江牌 CJ6100SGCH 双层公交车 (柴油)
+STR_RV_RAREGEM_NAME             :奇瑞万达 WD6110CHEVG01 公交车 (PHEV)
