More vehicle names

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -8,6 +8,11 @@ STR_PARAM_VANILLA_RV_ENABLED    :保留
 STR_PARAM_NIGHT_MODE            :夜景模式
 STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 
+STR_RV_RIME_NAME                :松花江牌五七式公交车 (汽油)
 STR_RV_LONGRIVER_NAME           :长江牌 CJ640B 公交车 (汽油)
+STR_RV_LONGRIVER_ARTICULATED_NAME :Changjiang CJ660B 铰接式公交车 (汽油)
 STR_RV_LONGRIVER_2DECKER_NAME   :长江牌 CJ6100SGCH 双层公交车 (柴油)
 STR_RV_RAREGEM_NAME             :奇瑞万达 WD6110CHEVG01 公交车 (PHEV)
+STR_RV_MILKYWAY_2DECKER_NAME    :宇通 ZK6116HNGS2 双层公交车 (柴油)
+
+STR_RV_FREEDOM_NAME             :一汽解放 CA10 卡车 (汽油)
