Translate more names; temporarily remove US translation

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -8,13 +8,17 @@ STR_PARAM_VANILLA_RV_ENABLED    :保留
 STR_PARAM_NIGHT_MODE            :夜景模式
 STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 
+STR_RV_HAPPYONE_BUS_NAME        :福特 F-60 加拿大军用型卡车改装公交车 (汽油)
 STR_RV_RIME_NAME                :松花江牌五七式公交车 (汽油)
 STR_RV_LONGRIVER_NAME           :长江牌 CJ640B 公交车 (汽油)
-STR_RV_LONGRIVER_ARTICULATED_NAME :Changjiang CJ660B 铰接式公交车 (汽油)
+STR_RV_LONGRIVER_ARTICULATED_NAME :长江牌 CJ660B 铰接式公交车 (汽油)
+STR_RV_LONGRIVER_COACH_NAME     :长江牌 CJ642B 长途大巴 (汽油)
 STR_RV_LONGRIVER_2DECKER_NAME   :长江牌 CJ6100SGCH 双层公交车 (柴油)
-STR_RV_RAREGEM_NAME             :奇瑞万达 WD6110CHEVG01 公交车 (PHEV)
+STR_RV_RAREGEM_NAME             :奇瑞万达 WD6110CHEVG01 公交车 (插电混动)
 STR_RV_MILKYWAY_2DECKER_NAME    :宇通 ZK6116HNGS2 双层公交车 (柴油)
 
-STR_RV_FORD_NAME                :福特 F-60 加拿大军用型卡车 (汽油)
+STR_RV_HAPPYONE_NAME            :福特 F-60 加拿大军用型卡车 (汽油)
 STR_RV_FREEDOM_NAME             :一汽解放 CA10 卡车 (汽油)
+STR_RV_FREEDOM_TANKER_NAME      :一汽解放 CA10 油罐车 (汽油)
+STR_RV_FREEDOM_TARPAULIN_NAME   :一汽解放 CA10 顶棚卡车 (汽油)
 STR_RV_SHIELD_NAME              :联合 U+550 重型卡车 (柴油)
