--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -8,13 +8,17 @@ STR_PARAM_VANILLA_RV_ENABLED    :Enabled
 STR_PARAM_NIGHT_MODE            :Night mode
 STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
 
+STR_RV_HAPPYONE_BUS_NAME        :Ford F-60 Canadian Military Pattern Combination Bus (gasoline)
 STR_RV_RIME_NAME                :Songhuajiang Type-57 Bus (gasoline)
 STR_RV_LONGRIVER_NAME           :Changjiang CJ640B Bus (gasoline)
 STR_RV_LONGRIVER_ARTICULATED_NAME :Changjiang CJ660B Bus (gasoline)
+STR_RV_LONGRIVER_COACH_NAME     :Changjiang CJ642B Coach (gasoline)
 STR_RV_LONGRIVER_2DECKER_NAME   :Changjiang CJ6100SGCH Double-Decker Bus (diesel)
 STR_RV_RAREGEM_NAME             :Chery Wanda WD6110CHEVG01 Bus (PHEV)
 STR_RV_MILKYWAY_2DECKER_NAME    :Yutong ZK6116HNGS2 Double-Decker Bus (diesel)
 
-STR_RV_FORD_NAME                :Ford F-60 Canadian Military Pattern Truck (gasoline)
+STR_RV_HAPPYONE_NAME            :Ford F-60 Canadian Military Pattern Truck (gasoline)
 STR_RV_FREEDOM_NAME             :FAW Jiefang CA10 Truck (gasoline)
+STR_RV_FREEDOM_TANKER_NAME      :FAW Jiefang CA10 Tank Truck (gasoline)
+STR_RV_FREEDOM_TARPAULIN_NAME   :FAW Jiefang CA10 Covered Wagon Truck (gasoline)
 STR_RV_SHIELD_NAME              :C&C U+550 Truck (diesel)
