More translations; randomize buildings

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -13,7 +13,7 @@ STR_RV_RIME_NAME                :松花江牌五七式公交车 (汽油)
 STR_RV_LONGRIVER_NAME           :长江牌 CJ640B 公交车 (汽油)
 STR_RV_LONGRIVER_ARTICULATED_NAME :长江牌 CJ660B 铰接式公交车 (汽油)
 STR_RV_LONGRIVER_COACH_NAME     :长江牌 CJ642B 长途大巴 (汽油)
-STR_RV_LONGRIVER_2DECKER_NAME   :长江牌 CJ6100SGCH 双层公交车 (柴油)
+STR_RV_LONGRIVER_2DECKER_NAME   :长江福莱西宝 CJ6100SGCH 双层公交车 (柴油)
 STR_RV_RAREGEM_NAME             :奇瑞万达 WD6110CHEVG01 公交车 (插电混动)
 STR_RV_MILKYWAY_2DECKER_NAME    :宇通 ZK6116HNGS2 双层公交车 (柴油)
 
