--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -13,7 +13,7 @@ STR_RV_RIME_NAME                :Songhuajiang Type-57 Bus (gasoline)
 STR_RV_LONGRIVER_NAME           :Changjiang CJ640B Bus (gasoline)
 STR_RV_LONGRIVER_ARTICULATED_NAME :Changjiang CJ660B Bus (gasoline)
 STR_RV_LONGRIVER_COACH_NAME     :Changjiang CJ642B Coach (gasoline)
-STR_RV_LONGRIVER_2DECKER_NAME   :Changjiang CJ6100SGCH Double-Decker Bus (diesel)
+STR_RV_LONGRIVER_2DECKER_NAME   :Changjiang Flxible CJ6100SGCH Double-Decker Bus (diesel)
 STR_RV_RAREGEM_NAME             :Chery Wanda WD6110CHEVG01 Bus (PHEV)
 STR_RV_MILKYWAY_2DECKER_NAME    :Yutong ZK6116HNGS2 Double-Decker Bus (diesel)
 
