More coloured variants

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -21,4 +21,5 @@ STR_RV_HAPPYONE_NAME            :福特 F-60 加拿大军用型卡车 (汽油)
 STR_RV_FREEDOM_NAME             :一汽解放 CA10 卡车 (汽油)
 STR_RV_FREEDOM_TANKER_NAME      :一汽解放 CA10 油罐车 (汽油)
 STR_RV_FREEDOM_TARPAULIN_NAME   :一汽解放 CA10 顶棚卡车 (汽油)
+STR_RV_FREEDOM_MK_II_NAME       :一汽解放 CA15 卡车 (汽油)
 STR_RV_SHIELD_NAME              :联合 U+550 重型卡车 (柴油)
