--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -21,4 +21,5 @@ STR_RV_HAPPYONE_NAME            :Ford F-60 Canadian Military Pattern Truck (gaso
 STR_RV_FREEDOM_NAME             :FAW Jiefang CA10 Truck (gasoline)
 STR_RV_FREEDOM_TANKER_NAME      :FAW Jiefang CA10 Tank Truck (gasoline)
 STR_RV_FREEDOM_TARPAULIN_NAME   :FAW Jiefang CA10 Covered Wagon Truck (gasoline)
+STR_RV_FREEDOM_MK_II_NAME       :FAW Jiefang CA15 Truck (gasoline)
 STR_RV_SHIELD_NAME              :C&C U+550 Truck (diesel)
