--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -22,4 +22,5 @@ STR_RV_FREEDOM_NAME             :FAW Jiefang CA10 Truck (gasoline)
 STR_RV_FREEDOM_TANKER_NAME      :FAW Jiefang CA10 Tank Truck (gasoline)
 STR_RV_FREEDOM_TARPAULIN_NAME   :FAW Jiefang CA10 Covered Wagon Truck (gasoline)
 STR_RV_FREEDOM_MK_II_NAME       :FAW Jiefang CA15 Truck (gasoline)
+STR_RV_YELLOWRIVER_NAME         :Huanghe JN150 Truck (diesel)
 STR_RV_SHIELD_NAME              :C&C U+550 Truck (diesel)
