--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -22,4 +22,5 @@ STR_RV_FREEDOM_NAME             :一汽解放 CA10 卡车 (汽油)
 STR_RV_FREEDOM_TANKER_NAME      :一汽解放 CA10 油罐车 (汽油)
 STR_RV_FREEDOM_TARPAULIN_NAME   :一汽解放 CA10 顶棚卡车 (汽油)
 STR_RV_FREEDOM_MK_II_NAME       :一汽解放 CA15 卡车 (汽油)
+STR_RV_YELLOWRIVER_NAME         :黄河牌 JN150 卡车 (柴油)
 STR_RV_SHIELD_NAME              :联合 U+550 重型卡车 (柴油)
