--- a/house/lang/chinese.lng
+++ b/house/lang/chinese.lng
@@ -1,5 +1,8 @@
 ##grflangid 0x56
 STR_GRF_NAME                    :Ahyangyi 的芜湖建筑模组
 STR_GRF_DESC                    :以芜湖的建筑为主题的模组
+
 STR_PARAM_VANILLA               :原版建筑
 STR_PARAM_VANILLA_DESC          :是否保留原版建筑
+STR_PARAM_VANILLA_DISABLED      :不保留
+STR_PARAM_VANILLA_ENABLED       :保留
