--- a/road/lang/english-uk.lng
+++ b/road/lang/english-uk.lng
@@ -1,3 +1,9 @@
 ##grflangid 0x00
 STR_GRF_NAME                    :Ahyangyi's Chinese Road Set
 STR_GRF_DESC                    :A road set based on roads in China.
+
+STR_RT_MAIN_ASPHALT_CONS        :Main Road (Asphalt) Construction
+STR_RT_MAIN_ASPHALT_NAME        :Main Road (Asphalt)
+
+STR_RT_SLATE_BLOCK_CONS         :Slate Block Road Construction
+STR_RT_SLATE_BLOCK_NAME         :Slate Block Road
