--- a/road/lang/english-uk.lng
+++ b/road/lang/english-uk.lng
@@ -7,3 +7,6 @@ STR_RT_MAIN_ASPHALT_NAME        :Main Road (Asphalt)
 
 STR_RT_SLATE_BLOCK_CONS         :Slate Block Road Construction
 STR_RT_SLATE_BLOCK_NAME         :Slate Block Road
+
+STR_RT_HIGHWAY_CONS             :Highway Construction
+STR_RT_HIGHWAY_NAME             :Highway
