--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -30,6 +30,8 @@ STR_RV_FREEDOM_MK_II_NAME       :一汽解放 CA15 卡车 (汽油)
 STR_RV_YELLOWRIVER_NAME         :黄河 JN150 卡车 (柴油)
 STR_RV_SHIELD_NAME              :联合 U+550 重型卡车 (柴油)
 
+STR_RV_NOVA_NAME                :中车浦镇阿尔斯通 INNOVIA 300型 跨座式单轨 (EMU)
+
 STR_RV_HAPPYONE_BUS_DESC        :{SILVER}
 STR_RV_RIME_DESC                :{SILVER}在解放 CA10 卡车量产后，各地工厂纷纷生产基于 CA10 底盘的公交车。{}{}松花江五七式公交车是由哈尔滨国营伟建机器厂生产的。
 STR_RV_LONGRIVER_DESC           :{SILVER}
@@ -46,3 +48,5 @@ STR_RV_FREEDOM_TARPAULIN_DESC   :{SILVER}基于苏联 ZIS-150 的卡车。是中
 STR_RV_FREEDOM_MK_II_DESC       :{SILVER}
 STR_RV_YELLOWRIVER_DESC         :{SILVER}仿制斯柯达 706 RT 而生产的卡车。是中国的第一辆重型卡车。
 STR_RV_SHIELD_DESC              :{SILVER}
+
+STR_RV_NOVA_DESC                :{SILVER}
