--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -9,6 +9,14 @@ STR_PARAM_ECONOMY_VANILLA_SUBARCTIC:原版寒带
 STR_PARAM_ECONOMY_VANILLA_SUBTROPICAL:原版热带
 STR_PARAM_ECONOMY_TOYLAND       :奇幻（玩具城）
 
+STR_PARAM_PRESET                :预设选项
+STR_PARAM_PRESET_DESC           :选择一个预设选项来快速决定整体玩法。{}{}玩法的各个具体方面可以通过后面的参数来覆盖调节。
+STR_PARAM_PRESET_AEGIS          :AEGIS
+STR_PARAM_PRESET_VANILLA        :原版
+STR_PARAM_PRESET_FIRS           :FIRS
+STR_PARAM_PRESET_YETI           :YETI
+STR_PARAM_PRESET_ITI            :ITI
+
 STR_PARAM_NIGHT_MODE            :夜景模式
 STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
