--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -2,14 +2,14 @@
 STR_GRF_NAME                    :Ahyangyi's Extended Generic Industry Set
 STR_GRF_DESC                    :A modular industry set with options to support various playstyles.
 
-STR_PARAM_ECONOMY               :Economy
+STR_PARAM_ECONOMY               :Global - Economy
 STR_PARAM_ECONOMY_DESC          :Each economy provides a different combination of cargos and industries, which might be further modified by other parameters.
 STR_PARAM_ECONOMY_VANILLA_TEMPERATE:Vanilla Temperate
 STR_PARAM_ECONOMY_VANILLA_SUBARCTIC:Vanilla Sub-Arctic
 STR_PARAM_ECONOMY_VANILLA_SUBTROPICAL:Vanilla Sub-Tropical
 STR_PARAM_ECONOMY_TOYLAND       :Toyland
 
-STR_PARAM_PRESET                :Preset
+STR_PARAM_PRESET                :Global - Preset
 STR_PARAM_PRESET_DESC           :Choose a preset that determines the overall playstyle.{}{}You can also override aspects of gameplay with the following parameters.
 STR_PARAM_PRESET_AEGIS          :AEGIS
 STR_PARAM_PRESET_VANILLA        :VANILLA
@@ -17,7 +17,17 @@ STR_PARAM_PRESET_FIRS           :FIRS
 STR_PARAM_PRESET_YETI           :YETI
 STR_PARAM_PRESET_ITI            :ITI
 
-STR_PARAM_NIGHT_MODE            :Night mode
+STR_PARAM_POLICY                :Macroeconomics - Policy
+STR_PARAM_POLICY_DESC           :Choose the overall economy policy.{}{}Consumer: most goods turn a profit{}Export: only exported goods turn a profut
+STR_PARAM_POLICY_CONSUMER       :Consumer
+STR_PARAM_POLICY_EXPORT         :Export
+
+STR_PARAM_PAYMENT               :Macroeconomics - Payment
+STR_PARAM_PAYMENT_DESC          :Choose how the payment depends on the distance.
+STR_PARAM_PAYMENT_LINEAR        :Linear
+STR_PARAM_PAYMENT_CONSTANT      :Constant
+
+STR_PARAM_NIGHT_MODE            :Graphics - Night mode
 STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
 STR_PARAM_NIGHT_MODE_DISABLED   :Disabled
