--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -8,6 +8,9 @@ STR_PARAM_ECONOMY_VANILLA_TEMPERATE:Vanilla Temperate
 STR_PARAM_ECONOMY_VANILLA_SUBARCTIC:Vanilla Sub-Arctic
 STR_PARAM_ECONOMY_VANILLA_SUBTROPICAL:Vanilla Sub-Tropical
 STR_PARAM_ECONOMY_TOYLAND       :Toyland
+STR_PARAM_ECONOMY_BASIC_TEMPERATE:Basic Temperate
+STR_PARAM_ECONOMY_BASIC_SUBARCTIC:Basic Sub-Arctic
+STR_PARAM_ECONOMY_BASIC_SUBTROPICAL:Basic Sub-Tropical
 
 STR_PARAM_PRESET                :Global - Preset
 STR_PARAM_PRESET_DESC           :Choose a preset that determines the overall playstyle.{}{}You can also override aspects of gameplay with the following parameters.
@@ -29,6 +32,13 @@ STR_PARAM_PAYMENT_DESC          :Choose how the payment depends on the distance.
 STR_PARAM_PAYMENT_PRESET        :Preset
 STR_PARAM_PAYMENT_LINEAR        :Linear
 STR_PARAM_PAYMENT_CONSTANT      :Constant
+
+STR_PARAM_WORKER                :Towns - Worker
+STR_PARAM_WORKER_DESC           :Choose how workers are produced.
+STR_PARAM_WORKER_PRESET         :Preset
+STR_PARAM_WORKER_NONE           :None
+STR_PARAM_WORKER_PASSENGER      :In place of Passengers
+STR_PARAM_WORKER_CENTER         :Workers Yard
 
 STR_PARAM_NIGHT_MODE            :Graphics - Night mode
 STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
