(aegis) More options (not implemented, as usual)

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -40,6 +40,16 @@ STR_PARAM_WORKER_NONE           :无
 STR_PARAM_WORKER_PASSENGER      :工人代替旅客
 STR_PARAM_WORKER_CENTER         :劳工之家
 
+STR_PARAM_INDUSTRY_SIZE         :画面 - 工业大小
+STR_PARAM_INDUSTRY_SIZE_DESC    :选择工业的占地大小
+STR_PARAM_INDUSTRY_SIZE_EXTRA_LARGE:特大
+STR_PARAM_INDUSTRY_SIZE_LARGE   :大
+STR_PARAM_INDUSTRY_SIZE_REGULAR :中
+STR_PARAM_INDUSTRY_SIZE_SMALL   :小
+STR_PARAM_INDUSTRY_SIZE_TINY    :特小
+STR_PARAM_INDUSTRY_SIZE_ONE_TILE:一格
+STR_PARAM_INDUSTRY_SIZE_ONE_TILE_FLAT:一格且平坦
+
 STR_PARAM_NIGHT_MODE            :画面 - 夜景模式
 STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
