--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -40,6 +40,16 @@ STR_PARAM_WORKER_NONE           :None
 STR_PARAM_WORKER_PASSENGER      :In place of Passengers
 STR_PARAM_WORKER_CENTER         :Workers Yard
 
+STR_PARAM_INDUSTRY_SIZE         :Graphics - Industry Size
+STR_PARAM_INDUSTRY_SIZE_DESC    :Choose the visual size of the industries
+STR_PARAM_INDUSTRY_SIZE_EXTRA_LARGE:Extra Large
+STR_PARAM_INDUSTRY_SIZE_LARGE   :Large
+STR_PARAM_INDUSTRY_SIZE_REGULAR :Regular
+STR_PARAM_INDUSTRY_SIZE_SMALL   :Small
+STR_PARAM_INDUSTRY_SIZE_TINY    :Tiny
+STR_PARAM_INDUSTRY_SIZE_ONE_TILE:One Tile
+STR_PARAM_INDUSTRY_SIZE_ONE_TILE_FLAT:One Tile & Flat
+
 STR_PARAM_NIGHT_MODE            :Graphics - Night mode
 STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
