(aegis) More options (WIP)

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -50,6 +50,14 @@ STR_PARAM_INDUSTRY_SIZE_TINY    :特小
 STR_PARAM_INDUSTRY_SIZE_ONE_TILE:一格
 STR_PARAM_INDUSTRY_SIZE_ONE_TILE_FLAT:一格且平坦
 
+STR_PARAM_COLOUR_SCHEME         :画面 - 配色方案
+STR_PARAM_COLOUR_SCHEME_DESC    :选择工业的配色方案。
+STR_PARAM_COLOUR_SCHEME_TWO     :双色
+STR_PARAM_COLOUR_SCHEME_ONE     :单色
+STR_PARAM_COLOUR_SCHEME_FIXED   :固定
+STR_PARAM_COLOUR_SCHEME_FIRS_3  :FIRS 3
+STR_PARAM_COLOUR_SCHEME_FIRS_4  :FIRS 4
+
 STR_PARAM_NIGHT_MODE            :画面 - 夜景模式
 STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
