--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -50,6 +50,14 @@ STR_PARAM_INDUSTRY_SIZE_TINY    :Tiny
 STR_PARAM_INDUSTRY_SIZE_ONE_TILE:One Tile
 STR_PARAM_INDUSTRY_SIZE_ONE_TILE_FLAT:One Tile & Flat
 
+STR_PARAM_COLOUR_SCHEME         :Graphics - Colour Scheme
+STR_PARAM_COLOUR_SCHEME_DESC    :Choose the colour scheme of the industries.
+STR_PARAM_COLOUR_SCHEME_TWO     :Two Colours
+STR_PARAM_COLOUR_SCHEME_ONE     :One Colour
+STR_PARAM_COLOUR_SCHEME_FIXED   :Fixed
+STR_PARAM_COLOUR_SCHEME_FIRS_3  :FIRS 3
+STR_PARAM_COLOUR_SCHEME_FIRS_4  :FIRS 4
+
 STR_PARAM_NIGHT_MODE            :Graphics - Night mode
 STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
