(Aegis) add options

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -18,6 +18,8 @@ STR_PARAM_PRESET_AEGIS          :AEGIS
 STR_PARAM_PRESET_VANILLA        :原版
 STR_PARAM_PRESET_FIRS           :FIRS
 STR_PARAM_PRESET_YETI           :YETI
+STR_PARAM_PRESET_CARIBBEAN      :加勒比海
+STR_PARAM_PRESET_LUMBERJACK     :伐木工业
 STR_PARAM_PRESET_ITI            :ITI
 
 STR_PARAM_POLICY                :宏观经济 - 政策
