--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -18,6 +18,8 @@ STR_PARAM_PRESET_AEGIS          :AEGIS
 STR_PARAM_PRESET_VANILLA        :VANILLA
 STR_PARAM_PRESET_FIRS           :FIRS
 STR_PARAM_PRESET_YETI           :YETI
+STR_PARAM_PRESET_CARIBBEAN      :Caribbean
+STR_PARAM_PRESET_LUMBERJACK     :Lumberjack
 STR_PARAM_PRESET_ITI            :ITI
 
 STR_PARAM_POLICY                :Macroeconomics - Policy
