(Aegis) format title

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x56
-STR_GRF_NAME                    :Ahyangyi 的扩展泛用工业包 (AEGIS)
+STR_GRF_NAME                    :AEGIS - Ahyangyi 的扩展泛用工业包
 STR_GRF_DESC                    :一个模块化的工业包，包含了用以支持各种玩法的选项
 
 STR_PARAM_ECONOMY               :全局选项 - 经济类型
