--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x00
-STR_GRF_NAME                    :Ahyangyi's Extended Generic Industry Set
+STR_GRF_NAME                    :AEGIS - Ahyangyi's Extended Generic Industry Set
 STR_GRF_DESC                    :A modular industry set with options to support various playstyles.
 
 STR_PARAM_ECONOMY               :Global - Economy
