(Aegis) Finish vanilla sub-tropical economy (sans water)

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -105,3 +105,5 @@ STR_CARGO_WHEA                  :Wheat
 STR_CARGO_DIAM                  :Diamonds
 STR_CARGO_MAIZ                  :Maize
 STR_CARGO_CORE                  :Copper Ore
+STR_CARGO_FRUT                  :Fruit
+STR_CARGO_RUBR                  :Rubber
