--- a/house/lang/english-uk.lng
+++ b/house/lang/english-uk.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x00
-STR_GRF_NAME                    :Ahyangyi's Chinese House Set
+STR_GRF_NAME                    :AWHS - Ahyangyi's Wuhu House Set
 STR_GRF_DESC                    :A house set, based on houses in Wuhu, Anhui, China.
 
 STR_PARAM_VANILLA               :Vanilla houses
