--- a/road/lang/chinese.lng
+++ b/road/lang/chinese.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x56
-STR_GRF_NAME                    :Ahyangyi 的中国道路模组
+STR_GRF_NAME                    :ACRS - Ahyangyi 的中国道路模组
 STR_GRF_DESC                    :以中国的道路为主题的模组
 
 STR_RT_MAIN_ASPHALT_CONS        :沥青主干路建设
