--- a/road/lang/english-uk.lng
+++ b/road/lang/english-uk.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x00
-STR_GRF_NAME                    :Ahyangyi's Chinese Road Set
+STR_GRF_NAME                    :ACRS - Ahyangyi's Chinese Road Set
 STR_GRF_DESC                    :A road set based on roads in China.
 
 STR_RT_MAIN_ASPHALT_CONS        :Main Road (Asphalt) Construction
