--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x56
-STR_GRF_NAME                    :Ahyangyi 的汽车模组
+STR_GRF_NAME                    :ACRVS - Ahyangyi 的中国汽车模组
 STR_GRF_DESC                    :以中国的汽车为基础的汽车模组。
 
 STR_PARAM_VANILLA_RV            :原版汽车
