--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -1,5 +1,5 @@
 ##grflangid 0x00
-STR_GRF_NAME                    :Ahyangyi's Road Vehicle Set
+STR_GRF_NAME                    :ACRVS - Ahyangyi's Chinese Road Vehicle Set
 STR_GRF_DESC                    :A road vehicle set, based on vehicles used in China.
 
 STR_PARAM_VANILLA_RV            :Vanilla road vehicles
