--- a/bridge/lang/english-uk.lng
+++ b/bridge/lang/english-uk.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x00
-STR_GRF_NAME                    :Ahyangyi's Wuhu Bridge Set
+STR_GRF_NAME                    :AWBS - Ahyangyi's Wuhu Bridge Set
 STR_GRF_DESC                    :A bridge set based on bridges in Wuhu, Anhui, China.
