--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x56
-STR_GRF_NAME                    :Ahyangyi 的芜湖车站包
+STR_GRF_NAME                    :AWSS - Ahyangyi 的芜湖车站包
 STR_GRF_DESC                    :基于芜湖的车站设计的模组
