(Aegis) various updates

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -53,6 +53,12 @@ STR_PARAM_PRIMARY_INDUSTRY_GROWTH_WORKERS           :工人
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_DISCRETE          :离散
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_CONTINUOUS        :连续
 
+STR_PARAM_PRIMARY_INDUSTRY_ZONING                   :第一产业 - 分区
+STR_PARAM_PRIMARY_INDUSTRY_ZONING_DESC              :选择是否限制每种第一产业到地图的某个区域内。
+STR_PARAM_PRIMARY_INDUSTRY_ZONING_PRESET            :预设
+STR_PARAM_PRIMARY_INDUSTRY_ZONING_DISABLED          :否
+STR_PARAM_PRIMARY_INDUSTRY_ZONING_ENABLED           :是
+
 STR_PARAM_INDUSTRY_SIZE         :画面 - 工业大小
 STR_PARAM_INDUSTRY_SIZE_DESC    :选择工业的占地大小
 STR_PARAM_INDUSTRY_SIZE_EXTRA_LARGE:特大
