(Aegis) Add water supply & tower

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -115,3 +115,4 @@ STR_CARGO_FRUT                  :Fruit
 STR_CARGO_RUBR                  :Rubber
 STR_CARGO_FMSP                  :Farm Supplies
 STR_CARGO_ENSP                  :Engineering Supplies
+STR_CARGO_WATR                  :Water
