(Aegis) Change workers to OTI1, which I think is saner than YETI

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -116,3 +116,4 @@ STR_CARGO_RUBR                  :Rubber
 STR_CARGO_FMSP                  :Farm Supplies
 STR_CARGO_ENSP                  :Engineering Supplies
 STR_CARGO_WATR                  :Water
+STR_CARGO_OTI1                  :Workers
