(Aegis) add more options

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -53,6 +53,13 @@ STR_PARAM_PRIMARY_INDUSTRY_GROWTH_WORKERS           :工人
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_DISCRETE          :离散
 STR_PARAM_PRIMARY_INDUSTRY_GROWTH_CONTINUOUS        :连续
 
+STR_PARAM_PRIMARY_INDUSTRY_CLOSURE                  :第一产业 - 关闭
+STR_PARAM_PRIMARY_INDUSTRY_CLOSURE_DESC             :选择第一产业是否可能关闭。{}{}不可能关闭 - 第一产业不可能关闭{}随机关闭 - 第一产业可能随机关闭，具体机制取决于前一个参数{}以储量关闭 - 第一产业有储量限制。
+STR_PARAM_PRIMARY_INDUSTRY_CLOSURE_PRESET           :预设
+STR_PARAM_PRIMARY_INDUSTRY_CLOSURE_DISABLED         :不可能关闭
+STR_PARAM_PRIMARY_INDUSTRY_CLOSURE_ENABLED          :随机关闭
+STR_PARAM_PRIMARY_INDUSTRY_CLOSURE_RESERVE          :以储量关闭
+
 STR_PARAM_PRIMARY_INDUSTRY_ZONING                   :第一产业 - 分区
 STR_PARAM_PRIMARY_INDUSTRY_ZONING_DESC              :选择是否限制每种第一产业到地图的某个区域内。
 STR_PARAM_PRIMARY_INDUSTRY_ZONING_PRESET            :预设
